--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,18 @@ langchain>=0.0.267
 langchain-anthropic>=0.0.1
 langchain-openai>=0.0.1
 langchain-google-genai>=0.0.1
+langchain-community>=0.0.1
 anthropic>=0.5.0
 openai>=1.0.0
 google-generativeai>=0.3.0
 supabase>=1.0.3
 requests>=2.28.2
 python-dotenv>=1.0.0
+matplotlib>=3.5.0
+plotly>=5.10.0
+pandas>=1.3.0
+numpy>=1.20.0
+scikit-learn>=1.0.0
+imageio>=2.9.0
+Pillow>=8.0.0
+scipy>=1.7.0
