--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ scikit-learn>=1.0.0
 imageio>=2.9.0
 Pillow>=8.0.0
 scipy>=1.7.0
+beautifulsoup4>=4.9.3
+langchain-core>=0.1.0
+playwright>=1.30.0
+selenium>=4.1.0
+webdriver-manager>=3.5.2
